Fix T76429: GHOST/Wayland event's don't correspond to physical keys